# SafeMessanger

./: ..gitignore.un~  .gitignore  CMakeLists.txt  package.json
NetCommon/: net_client.h  net_connection.h  net_message.h  net_server.h  net_tsqueue.h
clients/: client.cpp  client.js
clients/NativeVersion/: app.json  package.json  tailwind.config.js
clients/NativeVersion/app/: _layout.tsx  index.tsx
clients/NativeVersion/app/(auth)/: sign-in.tsx  sign-up.tsx
clients/NativeVersion/app/(tabs)/: _layout.tsx  chats.tsx
clients/NativeVersion/app/(tabs)/chats/: _layout.tsx  chat_content.tsx  index.tsx
clients/NativeVersion/app/(tabs)/notifications/: _layout.tsx  notifications.tsx
clients/NativeVersion/components/: AddChatModal.tsx  Chat.tsx  ChatsList.tsx  CustomButton.tsx  FormField.tsx  Message.tsx  Modal.tsx
clients/NativeVersion/constants/: icons.js
clients/NativeVersion/scripts/: client.js
servers/: expressServer.js  package-lock.json  package.json  user.model.js  websocketsServer.js
src/: client.cpp  client.js  server.cpp  server.js
unworking_src/: client.cpp  server.cpp
